remove dependency on com.sun.java.swing.plaf.windows as it is no longer included with non-Windows JREs, replaced with BasicLookAndFeel _shrug_